# littoral_cloud_impute

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  cloud_impute.py  cloud_mask.py  pyproject.toml  requirements.txt  run_impute.ipynb  vpint_cloud_impute.py
docs/: commit_template.md  dataset_requirements.md  references.md  research_plan.md  research_queries.md  research_template.md
docs/research_paper/: README.md  abstract.md  introduction.md  introduction_overview.md  literature_review.md  methodology.md
src/: __init__.py  cloud_impute.py  cloud_mask.py
